# ZhytoMate

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
.superpowers/sdd/: task-3-report.md  task-4-report.md
backend_app/: .env.example  Dockerfile  README.md  package-lock.json  package.json
backend_app/scripts/: audit-live-assistant.js  seed-demo.js
backend_app/src/: app.js  server.js
backend_app/test/: admin-news.test.js  admin-settings.test.js  admin-users.test.js  alert-client.test.js  assistant-feedback.test.js  assistant-links.test.js  assistant-places.test.js  auth-revocation.test.js  news-assistant.test.js  outage-parser.test.js  places-assistant.test.js  places.test.js  security.test.js
deploy/: README.md  reseed.sh
deploy/nginx/: zhytomate-http.conf  zhytomate-https.conf
docs/: CIVIC_GLOSSARY.md
frontend_app/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
frontend_app/e2e/: admin-contacts-settings.spec.js  admin-sections.spec.js  (+10 more)
ml-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ml-service/app/: config.py  deps.py  errors.py  main.py  metrics.py  middleware.py  protocols.py
ml-service/app/api/v1/: __init__.py  actions.py  health.py  ingest.py  query.py  vision.py
ml-service/app/background/: __init__.py  reaper.py
ml-service/app/components/: __init__.py  embedder.py  gemini.py  hybrid_retriever.py  llm.py  rate_limiter.py  repository.py
ml-service/app/domain/: __init__.py  actions.py  app_capabilities.py  chunker.py  civic_glossary.py  civic_intent.py  civic_verification.py  classifier.py  confidence.py  context.py  districts.py  fusion.py  language.py  opsec.py  prompts.py  reranking.py  retention.py  sufficiency.py  text.py  vision_prompts.py
ml-service/app/observability/: __init__.py  logging.py  metrics.py
ml-service/app/pipeline/: __init__.py  agent.py  base.py  simple.py
ml-service/app/schemas/: __init__.py  actions.py  common.py  ingest.py  query.py  retrieval.py  vision.py
ml-service/app/services/: __init__.py  action_service.py  ingest_service.py  rag_service.py  vision_service.py
ml-service/db/migrations/: 0001_init.sql  0002_hybrid_search.sql  0003_openai_embeddings.sql  0004_document_doc_type.sql  0005_normalize_lexical_tsv.sql  0006_split_lexical_date_labels.sql  runner.py
ml-service/eval/: run_eval.py
ml-service/eval/datasets/: queries_cache.jsonl  retrieval_fixtures.jsonl  retrieval_gold.jsonl  routing_gold.jsonl  zhytomyr_queries.jsonl
ml-service/scripts/: audit_civic_http.py  audit_http.py  benchmark_http.py  calibrate_thresholds.py  calibration_data.json  load_test_http.py  seed_manual_facts.py
ml-service/tests/: conftest.py
ml-service/tests/contract/: test_api_contracts.py
ml-service/tests/eval/: conftest.py  test_eval_gate.py
ml-service/tests/fakes/: __init__.py  fake_deterministic_embedder.py  fake_embedder.py  fake_gemini.py  fake_generator.py  fake_repository.py  fake_retriever.py
ml-service/tests/flows/: test_agent_flow.py  test_rag_flow.py  test_vision_flow.py
ml-service/tests/integration/: conftest.py  test_hybrid_retrieval.py  test_ingest_idempotency.py  test_repository.py  test_retrieval_filters.py  test_vector_ordering.py
ml-service/tests/unit/: test_action_service.py  test_actions.py  test_agent_pipeline.py  test_app_capabilities.py  test_chunker.py  test_civic_glossary.py  test_civic_intent.py  test_civic_verification.py  test_classifier.py  test_confidence.py  test_context.py  test_districts.py  test_embedder.py  test_eval_judge.py  test_fusion.py  test_hybrid_retriever.py  test_ingest_service.py  test_language.py  test_llm_client.py  test_logging_config.py  test_middleware.py  test_opsec.py  test_pipeline_base.py  test_prompts.py  test_rag_service.py  test_rag_service_sources.py  test_rate_limiter.py  test_reranking.py  test_retention.py  test_sufficiency.py  test_text_hash.py  test_tsquery.py  test_vision.py
monitoring/: docker-compose.yml
parser/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  index.js  package-lock.json  package.json
temp/: create-demo-survey.js  export-news-from-knowledge-base.sql  news_from_kb.jsonl
(+247 files in other folders)
