[project]
name = "zhytomate-ml"
version = "0.1.0"
description = "ZhytoMate ML service — RAG civic Q&A + vision report triage (FastAPI)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "numpy>=2.0",
    "openai[aiohttp]>=1.50",
    "tiktoken>=0.7",
    "tenacity>=8.2",
    "prometheus-fastapi-instrumentator>=7.0",
    "prometheus-client>=0.20",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio[trio]>=4.0",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Flat layout: app/ and db/ are PEP 420 namespace packages at the project root. List them
# explicitly so editable installs don't trip on "multiple top-level packages" auto-discovery.
[tool.setuptools.packages.find]
include = ["app*", "db*"]
namespaces = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = ["slow: exercises real Postgres/eval harness; excluded from the fast lane (pytest -m 'not slow')"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# FastAPI's Depends()-as-a-default-argument is the framework's own documented DI pattern, not the
# accidental-mutable-default bug B008 exists to catch — whitelist it instead of noqa-ing every route.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]

[tool.mypy]
# NOTE: production runs python:3.11-slim (see Dockerfile) — this is NOT a runtime version bump.
# It's pinned to 3.12 solely because numpy 2.5's bundled __init__.pyi uses PEP 695 `type` alias
# statements unconditionally, which mypy refuses to parse below python_version=3.12 — a hard
# parse-time failure that isn't reachable via `ignore_missing_imports`, `ignore_errors`, or
# `follow_imports = "skip"` overrides (all tried; the stub is parsed before overrides apply).
# The stub syntax itself never executes, so this has no effect on actual 3.11 compatibility.
# Revisit once numpy ships 3.11-parseable stubs or the base image moves to 3.12+.
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
ignore_missing_imports = true
# app/ and db/ are PEP 420 namespace packages (no __init__.py at the root — see
# [tool.setuptools.packages.find] above); without this, mypy resolves app/schemas/ingest.py as
# both "schemas.ingest" and "app.schemas.ingest" and refuses to proceed.
explicit_package_bases = true
mypy_path = "."
